# NTO-ATS-leaderboard

./: .gitignore  LICENCE  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
app/: __init__.py
backend/app/: __init__.py  views.py
frontend/: index.html  vite.config.js
frontend/src/: App.vue
